# cc-template

./: README.md  pyproject.toml
docs/: adding-language-module.md
docs/superpowers/plans/: 2026-05-24-cc-project-template.md
docs/superpowers/specs/: 2026-05-24-cc-project-template-design.md
modules/api-design/: module.yml
modules/api-design/snippets/: api-design-graphql.md  api-design-grpc.md  api-design-rest.md
modules/api-design/templates/: openapi.yaml  schema.graphql  service.proto
modules/automation/: module.yml
modules/automation/snippets/: ci-github-actions.md  ci-gitlab-ci.md
modules/automation/templates/: ci.yml  gitlab-ci.yml
modules/code-review/: module.yml
modules/code-review/hooks/: pre-push-reminder.yaml
modules/code-review/snippets/: code-review.md
modules/core/: module.yml
modules/core/snippets/: behavior-guidelines.md  coding-standards.md  project-info.md  testing.md
modules/git-convention/: module.yml
modules/lang-cpp/: module.yml
modules/lang-python/: module.yml
modules/lang-python/templates/: Makefile  pyproject.toml
modules/lang-rust/: module.yml
modules/lang-shell/: module.yml
modules/security/: module.yml
modules/testing/: module.yml
presets/: preset-cpp.yml  preset-minimal.yml  preset-python.yml  preset-rust.yml  preset-shell.yml
scripts/: dependency_resolver.py  generator.py  init.py  merger.py  module_loader.py  variable_collector.py
tests/: conftest.py  test_dependency_resolver.py  test_generator.py  test_init.py  test_merger.py  test_module_loader.py  test_variable_collector.py
(+43 files in other folders)
